8321204: C2: assert(false) failed: node should be in igvn hash table

Reviewed-by: phh
Backport-of: d1aad71209092013a89b3b85a258dd4d2e31224a